--- a/ProyectoTiendita/ProyectoTiendita.csproj
+++ b/ProyectoTiendita/ProyectoTiendita.csproj
@@ -44,6 +44,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>RECURSOS\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -70,6 +74,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="POJOS\Cliente.cs" />
+    <Compile Include="POJOS\DetallePedido.cs" />
+    <Compile Include="POJOS\Pedido.cs" />
+    <Compile Include="POJOS\Producto.cs" />
+    <Compile Include="POJOS\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -83,7 +92,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DATOS\" />
-    <Folder Include="POJOS\" />
     <Folder Include="VISTA\" />
   </ItemGroup>
   <PropertyGroup>
