VISTAS PEDIDOS, PRINCIPAL Y CARRITO

--- a/ProyectoTiendita/ProyectoTiendita.csproj
+++ b/ProyectoTiendita/ProyectoTiendita.csproj
@@ -75,7 +75,9 @@
     <Content Include="VISTA\CRUDProductos.aspx" />
     <Content Include="VISTA\CRUDUsuarios.aspx" />
     <Content Include="VISTA\LoginAdmin.aspx" />
+    <Content Include="VISTA\Pedidos.aspx" />
     <Content Include="VISTA\Principal.aspx" />
+    <Content Include="VISTA\VerCarrito.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -118,12 +120,26 @@
     <Compile Include="VISTA\LoginAdmin.aspx.designer.cs">
       <DependentUpon>LoginAdmin.aspx</DependentUpon>
     </Compile>
+    <Compile Include="VISTA\Pedidos.aspx.cs">
+      <DependentUpon>Pedidos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VISTA\Pedidos.aspx.designer.cs">
+      <DependentUpon>Pedidos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="VISTA\Principal.aspx.cs">
       <DependentUpon>Principal.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="VISTA\Principal.aspx.designer.cs">
       <DependentUpon>Principal.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VISTA\VerCarrito.aspx.cs">
+      <DependentUpon>VerCarrito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VISTA\VerCarrito.aspx.designer.cs">
+      <DependentUpon>VerCarrito.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
