--- a/ProyectoTiendita/ProyectoTiendita.csproj
+++ b/ProyectoTiendita/ProyectoTiendita.csproj
@@ -48,6 +48,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>RECURSOS\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
