--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -20,4 +20,25 @@
     </compilers>
   </system.codedom>
 
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="wsindicadoreseconomicosSoap" maxReceivedMessageSize="1000000">
+          <security mode="Transport" />
+        </binding>
+        <binding name="wsindicadoreseconomicosSoap1" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="wsindicadoreseconomicosSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="wsindicadoreseconomicosSoap"
+        contract="ServiceReference2.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
