--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -20,4 +20,19 @@
     </compilers>
   </system.codedom>
 
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="SevicioProductosSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="SevicioProductosSoap1" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://localhost:44350/SevicioProductos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="SevicioProductosSoap"
+        contract="ServiceReference1.SevicioProductosSoap" name="SevicioProductosSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
