--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -27,6 +27,10 @@
           <security mode="Transport" />
         </binding>
         <binding name="wsindicadoreseconomicosSoap1" />
+        <binding name="ServicioProductoSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ServicioProductoSoap1" />
       </basicHttpBinding>
       <customBinding>
         <binding name="wsindicadoreseconomicosSoap12">
@@ -39,6 +43,9 @@
       <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
         binding="basicHttpBinding" bindingConfiguration="wsindicadoreseconomicosSoap"
         contract="ServiceReference2.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap" />
+      <endpoint address="https://localhost:44350/ServicioProducto.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioProductoSoap"
+        contract="ServiceReference3.ServicioProductoSoap" name="ServicioProductoSoap" />
     </client>
   </system.serviceModel>
 </configuration>
