--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -31,6 +31,14 @@
           <security mode="Transport" />
         </binding>
         <binding name="ServicioProductoSoap1" />
+        <binding name="ServicioClienteSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ServicioClienteSoap1" />
+        <binding name="ServicioUsuarioSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ServicioUsuarioSoap1" />
       </basicHttpBinding>
       <customBinding>
         <binding name="wsindicadoreseconomicosSoap12">
@@ -46,6 +54,12 @@
       <endpoint address="https://localhost:44350/ServicioProducto.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServicioProductoSoap"
         contract="ServiceReference3.ServicioProductoSoap" name="ServicioProductoSoap" />
+      <endpoint address="https://localhost:44350/ServicioCliente.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioClienteSoap"
+        contract="ServiceReference4.ServicioClienteSoap" name="ServicioClienteSoap" />
+      <endpoint address="https://localhost:44350/ServicioUsuario.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioUsuarioSoap"
+        contract="ServiceReference5.ServicioUsuarioSoap" name="ServicioUsuarioSoap" />
     </client>
   </system.serviceModel>
 </configuration>
