--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -39,6 +39,9 @@
           <security mode="Transport" />
         </binding>
         <binding name="ServicioUsuarioSoap1" />
+        <binding name="ServicioClienteSoap2" />
+        <binding name="ServicioProductoSoap2" />
+        <binding name="ServicioUsuarioSoap2" />
       </basicHttpBinding>
       <customBinding>
         <binding name="wsindicadoreseconomicosSoap12">
@@ -60,6 +63,15 @@
       <endpoint address="https://localhost:44350/ServicioUsuario.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServicioUsuarioSoap"
         contract="ServiceReference5.ServicioUsuarioSoap" name="ServicioUsuarioSoap" />
+      <endpoint address="http://kokoyjesus-001-site1.itempurl.com/ServicioCliente.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioClienteSoap2"
+        contract="ServicioClientes.ServicioClienteSoap" name="ServicioClienteSoap1" />
+      <endpoint address="http://kokoyjesus-001-site1.itempurl.com/ServicioProducto.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioProductoSoap2"
+        contract="ServicioProductos.ServicioProductoSoap" name="ServicioProductoSoap1" />
+      <endpoint address="http://kokoyjesus-001-site1.itempurl.com/ServicioUsuario.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServicioUsuarioSoap2"
+        contract="ServicioUsuarios.ServicioUsuarioSoap" name="ServicioUsuarioSoap1" />
     </client>
   </system.serviceModel>
 </configuration>
