--- a/ProyectoTiendita/Web.config
+++ b/ProyectoTiendita/Web.config
@@ -42,18 +42,23 @@
         <binding name="ServicioClienteSoap2" />
         <binding name="ServicioProductoSoap2" />
         <binding name="ServicioUsuarioSoap2" />
+        <binding name="wsindicadoreseconomicosSoap2">
+          <security mode="Transport" />
+        </binding>
+        <binding name="wsindicadoreseconomicosSoap3" />
       </basicHttpBinding>
       <customBinding>
         <binding name="wsindicadoreseconomicosSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpsTransport />
         </binding>
+        <binding name="wsindicadoreseconomicosSoap121">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
-        binding="basicHttpBinding" bindingConfiguration="wsindicadoreseconomicosSoap"
-        contract="ServiceReference2.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap" />
       <endpoint address="https://localhost:44350/ServicioProducto.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServicioProductoSoap"
         contract="ServiceReference3.ServicioProductoSoap" name="ServicioProductoSoap" />
@@ -72,6 +77,18 @@
       <endpoint address="http://kokoyjesus-001-site1.itempurl.com/ServicioUsuario.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServicioUsuarioSoap2"
         contract="ServicioUsuarios.ServicioUsuarioSoap" name="ServicioUsuarioSoap1" />
+      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="wsindicadoreseconomicosSoap"
+        contract="ServiceReference2.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap" />
+      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
+        binding="customBinding" bindingConfiguration="wsindicadoreseconomicosSoap12"
+        contract="ServiceReference2.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap12" />
+      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
+        binding="basicHttpBinding" bindingConfiguration="wsindicadoreseconomicosSoap2"
+        contract="ServicioExterno.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap1" />
+      <endpoint address="https://gee.bccr.fi.cr/Indicadores/Suscripciones/WS/wsindicadoreseconomicos.asmx"
+        binding="customBinding" bindingConfiguration="wsindicadoreseconomicosSoap121"
+        contract="ServicioExterno.wsindicadoreseconomicosSoap" name="wsindicadoreseconomicosSoap121" />
     </client>
   </system.serviceModel>
 </configuration>
